# file-compressor

./: .gitignore  README.md  algorithms.py  compressor.py  interface.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
src/file-compressor/: algorithms.py
src/file_compressor/: __init__.py  compressor.py
tests/: test_file_compress.py
